# tributary

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
benches/: embedder_throughput.rs
confluence/: pyproject.toml  smoke_test.py
confluence/confluence/: __init__.py  config.py  layers.py  loss.py  model.py  optimizer.py  train.py
data/metadata/: rel-stack.json
documentation/: model_architecture.md  preprocessing.md  rust_profiling.md  sampling.md  semantic_types.md  system_architecture.md  task_framework.md
documentation/model_architecture/: TABLE_OF_CONTENTS.md  attention.md  batch_structure.md  decoder_heads_and_loss.md  training_config.md  transformer_blocks.md  value_encoding.md
headwater/: Cargo.toml  pyproject.toml
headwater/src/: common.rs  embedder.rs  lib.rs  python.rs  sampler.rs
helpful_notes/: burn_ddp_architecture.md  graph_sampler_architecture.md  task_framework.md
ort/scripts/: export_onnx.py
scripts/: export_onnx.py  generate_metadata.py  pyproject.toml
src/: common.rs  embedder.rs  lib.rs  model.rs  training.rs
