[package]
name = "tributary"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
half = { version = "2.7.1", features = ["rkyv"] }
hf-hub = "0.4.3"
indicatif = "0.18.3"
itertools = "0.14.0"
memmap2 = "0.9.9"
mimalloc = "0.1.48"
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
parking_lot = "0.12.5"
rand = "0.9.2"
rayon = "1.11.0"
rkyv = { version = "0.8.14", features = ["pointer_width_64"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokenizers = { version = "0.22.2", features = ["hf-hub"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand_distr = "0.5"

[[bench]]
name = "embedder_throughput"
harness = false

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[lib]
name = "tributary"
path = "src/lib.rs"

[[bin]]
name = "preprocess"
path = "src/bin/preprocess.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"
