[package]
name = "headwater"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = { version = "57.3", default-features = true, features = ["ipc"] }
chrono = "0.4"
clap = { version = "4.5.57", features = ["derive"] }
datafusion = "52.1"
half = { version = "2", features = ["bytemuck", "serde"] }
indexmap = { version = "2", features = ["serde"] }
indicatif = "0.18.3"
itertools = "0.14.0"
memmap2 = "0.9.9"
mimalloc = "0.1.48"
parking_lot = "0.12.5"
parquet = "57.2"
rand = "0.10.0"
rand_distr = "0.6.0"
rayon = "1.11.0"
regex = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
rand_distr = "0.6.0"

[profile.dev]
debug = 0

[profile.release]
lto = "thin"
panic = "abort"

[lib]
name = "headwater"
path = "src/lib.rs"

[[bin]]
name = "preprocess"
path = "src/bin/preprocess.rs"

[[bin]]
name = "inspect"
path = "src/bin/inspect.rs"
